--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Контейнер для изображений от других пользователей -->
     <section class="pictures  container">
+      <div class="content display_content"></div>
       <h2 class="pictures__title  visually-hidden">Фотографии других пользователей</h2>
 
       <!-- Поле для загрузки нового изображения на сайт -->
