--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <!-- Контейнер для изображений от других пользователей -->
     <section class="pictures  container">
-      <div class="content display_content"></div>
-      <h2 class="pictures__title  visually-hidden">Фотографии других пользователей</h2>
+
+            <h2 class="pictures__title  visually-hidden">Фотографии других пользователей</h2>
 
       <!-- Поле для загрузки нового изображения на сайт -->
       <section class="img-upload">
@@ -133,7 +133,7 @@
       </section>
 
       <!-- Здесь будут изображения других пользователей -->
-
+      <div class = "photos-gallery"></div>
     </section>
 
     <!-- Полноэкранный показ изображения -->
